<resources>
    <string name="app_name">迹伴</string>

    <!-- Strings related to login -->
    <string name="prompt_phone" translatable="false">手机号码*</string>
    <string name="prompt_password" translatable="false">密码*</string>
    <string name="action_sign_in" translatable="false">登录</string>
    <string name="action_sign_in_short" translatable="false">登录</string>
    <string name="error_invalid_phone" translatable="false">手机号码格式不正确</string>
    <string name="error_invalid_password" translatable="false">密码至少6位,最多12位</string>
    <string name="error_incorrect_password" translatable="false">密码错误</string>
    <string name="error_field_required" translatable="false">此项必填</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login" translatable="false">登录</string>
    <string name="forget_password" translatable="false">忘记密码</string>
    <string name="create_new_account" translatable="false">注册新账号</string>
    <string name="verify_code" translatable="false">验证码*</string>
    <string name="new_password" translatable="false">新密码*</string>
    <string name="request_verify_code" translatable="false">获取验证码</string>
    <string name="reset_password" translatable="false">重置密码</string>
    <string name="title_activity_tabs" translatable="false">TabsActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="next_step" translatable="false">下一步</string>
    <string name="request" translatable="false">获取</string>
    <string name="set_password" translatable="false">设置密码*</string>
    <string name="input_nickname" translatable="false">输入昵称*</string>
    <string name="get_random" translatable="false">随机生成</string>
    <string name="action_sign_up" translatable="false">注册</string>
    <string name="pick_birthday" translatable="false">选择生日*</string>
    <string name="finish_sign_up" translatable="false">完成注册</string>
    <string name="male" translatable="false">男</string>
    <string name="female" translatable="false">女</string>
    <string name="agreement" translatable="false">我同意遵守\"迹伴用户协议\"</string>
    <string name="error_date_format" translatable="false">日期格式错误</string>
    <string name="please_agree" translatable="false">请选择同意</string>
    <string name="error_invalid_verify_code" translatable="false">验证码格式不正确</string>
    <string name="reset_password_ok" translatable="false">密码重置成功</string>
    <string name="error_verify_code" translatable="false">验证码错误</string>
    <string name="account_existed" translatable="false">账户已存在</string>
    <string name="error_invalid_nickname" translatable="false">昵称需要3-12个字符</string>
    <string name="error_invalid_birthday" translatable="false">出生日期有误</string>
    <string name="must_agree" translatable="false">请同意守则</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="footprint">足迹</string>
    <string name="nearby">迹伴</string>
    <string name="logout">注销</string>
    <string name="mine">我的</string>
    <string name="all">所有</string>
    <string name="i_send_a_mail_to">我寄了一封信给</string>
    <string name="send_a_mail_to_me">寄了一封信给我</string>
    <string name="i_reply_to_sb">我和%1$s回信了</string>
    <string name="sb_reply_to_me">%1$s给我回信了</string>
    <string name="i_follow_to_sb">我关注了%1$s%2$s</string>
    <string name="be_friend">, 并成为好友</string>
    <string name="sb_follow_to_me">%1$s关注了我%2$s</string>
    <string name="daily_report">今天我被%1$d人迹录了片刻, 迹录了%2$d次他人的片刻, 增加了%3$d个新粉丝</string>
    <string name="welcome">欢迎第一次来到迹伴</string>
    <string name="say_something">说点什么吧</string>
    <string name="publish">发布</string>
    <string name="input_address_pls">请输入地址</string>
    <string name="error_invalid_moment_content">内容不能超过120字</string>
    <string name="error_invalid_place">地名不得超过70字</string>
    <string name="moment_content_place_required">内容和地址都不能为空</string>
    <string name="loading">处理中...</string>
    <string name="go_to_see">去看看</string>
    <string name="be_your_fans">成为了你的粉丝</string>
    <string name="collect_ta_moment">迹录了Ta的片刻</string>
    <string name="collect_your_moment">迹录了你的片刻</string>
    <string name="years_old">岁</string>
    <string name="follow">关注</string>
    <string name="like">like</string>
    <string name="follow_ta">关注Ta, 展开我们的时空线</string>
    <string name="we_meet_shoulder_n_times">我们%1$d次擦肩而过</string>
    <string name="ta_meet_your_n_moments">Ta遇见过你的%1$d条片刻</string>
    <string name="i_meet_ta_n_moments">我遇见过Ta的%1$d条片刻</string>
    <string name="i_meet_ta_shoulder">我和Ta擦肩而过了</string>
    <string name="i_collect_ta_moment">我迹录了Ta的片刻</string>
    <string name="ta_collect_my_moment">Ta迹录了我的片刻</string>
    <string name="private_reply">私密回复</string>
    <string name="send">发送</string>
    <string name="reply_to">回复</string>
    <string name="click_to_load_more">点击加载更多</string>
    <string name="no_more_data">没有更多了</string>
    <string name="content_can_not_be_empty">内容不能为空</string>
    <string name="distance_to">距离%1$d米</string>
    <string name="followed">已关注</string>
    <string name="cancel_follow">取消关注</string>
    <string name="refresh">刷新</string>
    <string name="moment">片刻</string>
    <string name="friend">伴友</string>
    <string name="system">系统</string>
    <string name="message">消息</string>
    <string name="moment_detail">片刻详情</string>
    <string name="more">更多</string>
    <string name="moment_detail_hint">我也要评论</string>
    <string name="secret_replay_hint">私密回复:</string>
    <string name="replay_hint">回复:</string>
    <string name="daily_report_title">每日报告</string>
    <string name="chat">聊天</string>
    <string name="msg">寄信</string>

</resources>
