<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_cl"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/mybanner_iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/header_civ"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="39dp"
            android:src="@color/white"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/main_cl"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/below_bar"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/header_civ"
            app:layout_constraintRight_toRightOf="@+id/header_civ"
            app:layout_constraintTop_toBottomOf="@+id/header_civ" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/user_info_cly"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/header_civ"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/nickname_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/age_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/cardview_margin"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="184dp"
                android:layout_height="20dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="follows:"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/follow_num_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" ,like:"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/like_num_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toRightOf="@+id/header_civ"
            app:layout_constraintTop_toBottomOf="@+id/user_info_cly">

            <LinearLayout
                android:id="@+id/chat_ic"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@mipmap/timeline_msg3x" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:text="@string/chat"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/foot_ic"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                app:layout_constraintLeft_toRightOf="@+id/chat_ic">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@mipmap/timeline_foot3x" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:text="@string/footprint"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/msg_ic"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                app:layout_constraintLeft_toRightOf="@+id/foot_ic">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@mipmap/timeline_msg3x" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:text="@string/msg"
                    android:textColor="@color/white" />
            </LinearLayout>


        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</layout>